[package]
name = "Solver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
glob = "0.3"
futures = "0.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"